# sget-rs

./: Cargo.toml  README.md  file.sh  go.mod  justfile  main.go
.github/: dependabot.yml
.github/workflows/: main.yml
src/: keys.rs  main.rs  oci.rs  policy.rs  utils.rs
tests/: nopanic.ci  test.sh
tests/test_data/: fulcio_root.pem  policy_bad.json  policy_good.json
