[package]
name = "sget"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.11", features = ["serde"] }
clap = "3.0.0-beta.5"
serde_json = "1.0.68"
serde = {version = "1.0.130", features = ["derive"]}
serde_plain = "1.0.0"
serde_with = { version = "1.8.0", features = ["json"]}
structopt = "0.3"
oci-distribution = "0.7.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
