[package]
name = "sget"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4.11", features = ["serde"] }
clap = "3.0.0-beta.5"
serde_json = { version = "1.0", features = ["raw_value"] }
serde = {version = "1.0.130", features = ["derive"]}
serde_plain = "1.0.0"
serde_with = { version = "1.8.0", features = ["json"]}
structopt = "0.3"
oci-distribution = "0.7.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
time = "0.1"
base64 = "0.13.0"
x509-parser = "0.12.0"
p256 = {version = "0.9.0", features = ["ecdsa-core"]}
ecdsa = { version = "0.12.4", features = ["verify", "pem", "der", "pkcs8"] }